# myRPC

./: CMakeLists.txt  README.md  codec.h  connection.cpp  connection.h  register.cpp  register.h  rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h
client/: main.cpp
server/: main.cpp
